2002-09-30  Sam Steingold  <sds@gnu.org>

	* init.lisp (defun): use GET-FUNNAME-SYMBOL instead of GET-SETF-SYMBOL
	* trace.lisp (check-traceable): ditto

2002-09-29  Sam Steingold  <sds@gnu.org>

	* makemake.in: fixed regeneration of intparam.h and floatparam.h

2002-09-29  Sam Steingold  <sds@gnu.org>

	* m4/readline.m4 (CL_READLINE): check for `rl_already_prompted'
	and reject readline versions that lack it

2002-09-29  Sam Steingold  <sds@gnu.org>

	* intparam.c: include <stdlib.h> for exit(3) to avoid a warning

2002-09-26  Sam Steingold  <sds@gnu.org>

	SOCKET:SOCKET-OPTIONS - an interface to getsockopt/setsockopt
	* stream.d (sock_opt_bool, sock_opt_int, sock_opt_time)
	(SOCKET-OPTIONS): new functions
	* constsym.d (SOCKET-OPTIONS, :SO-*): added
	* subr.d (socket_options): added
	* constobj.d (type_socket_option): added
	* init.lisp (SOCKET-OPTIONS): export

2002-09-25  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (special-variable-p): added a COMPILER-MACRO
	* init.lisp (%the-environment-error): renamed to %UNCOMPILABLE

2002-09-25  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-form): fixed the same bug again:
	EXPAND-COMPILER-MACRO may return an atom.
	This bug has already been fixed on 2002-02-28,
	but it was re-introduced on 2002-04-22.  Yuk.

2002-09-25  Sam Steingold  <sds@gnu.org>

	* compiler.lisp: removed the cross-compilation infrastructure,
	which was not used for over 10 years!

2002-09-25  Sam Steingold  <sds@gnu.org>

	* check-lispfun.lisp (check-lisp-defs): do not need explicit
	APPEASE-CERRORS

2002-09-25  Sam Steingold  <sds@gnu.org>

	* eval.d (symbol_env_search): new function
	(sym_value, setq): use it
	(SPECIAL-VARIABLE-P): accept an optional second argument
	- the environment (NIL for global, T for local, VENV, or ENV5)
	moved here from symbol.d because it uses symbol_env_search()
	* subr.d (SPECIAL-VARIABLE-P): changed the signagure
	* constobj.d (version): bumped because SPECIAL-VARIABLE-P is in FUNTAB